<resources>
    <string name="app_id">10908012892</string>
    <string name="app_name">Battle Monsters</string>
    <string name="btn_signin">Sign In</string>
    <string name="btn_signup">Sign Up</string>
    <string name="login_email_hint">yourmailhere@email.com</string>
    <string name="password_hint">password</string>
    <string name="btn_singleplayer">Single Player</string>
    <string name="btn_multiplayer">Multi Player</string>
    <string name="btn_leaderboard">Leaderboard</string>
    <string name="btn_signout">Sign Out</string>
    <string name="character_image_placeholder">Character image</string>
    <string name="btn_confirm_character">Confirm Choice</string>
    <string name="btn_attack">Attack</string>
    <string name="btn_defend">Defend</string>
    <string name="btn_heal">Heal</string>
    <string name="current_health_text">Current Health: %1$d/%2$d</string>
    <string name="character_attack">Attack: %1$d</string>
    <string name="character_defense">Defense: %1$d</string>
    <string name="character_speed">Speed: %1$d</string>
    <string name="character_stat_placeholder">Stat: 100</string>
    <string name="character_name">Choose: %1$s</string>
    <string name="character_name_placeholder">Choose: monster</string>
    <string name='character1_name'>Beasty</string>
    <string name="character2_name">Little devil</string>
    <string name="character3_name">Flopsy</string>
    <string name="character4_name">Hopper</string>
    <string name="character_health">Health: %1$d/100</string>
    <string name="character_health_placeholder">Health: 100/100</string>
    <string name="game_finished_victory_text">Congratulations! \n You won!</string>
    <string name="game_finished_loose_text">Oh no! \n Better luck next time!</string>
    <string name="game_finished_placeholder">Game Over! \n Try again to do better!</string>
    <string name="restart_btn">Play Again</string>
    <string name="main_menu_btn">Back to menu</string>
    <string name="single_leaderboard_nav">1 Player</string>
    <string name="multi_leaderboard_nav">2 Player</string>
    <string name="leaderboard_title">Leaderboard</string>
    <string name="player_name_placeholder">Name</string>
    <string name="player_score_placeholder">100</string>
    <string name="leaderboard_player_name">Username: \n %1$s</string>
    <string name="leaderboard_player_score">Score: \n %1$d</string>
    <string name="btn_profile_page">Profile</string>
    <string name="profile_name_hint">YourName</string>
    <string name="profile_name_text">You can change the name others will see on the
    leader board here if you want</string>
    <string name="profile_save_button">Save</string>
    <string name="start_matchmaking">Start Matchmaking</string>
    <string name="search_opponent">Looking for opponent</string>
    <string name="fr">French</string>
    <string name="en">English</string>
    <string name="language_placeholder">Language</string>
    <string name="leaderboard_rank_placeholder">1</string>
    <string name="leaderboard_rank_text">%i</string>

</resources>
