<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/activityBackground">


    <EditText
        android:background="@drawable/edit_text_background"
        android:id="@+id/user_email"
        android:textColor="@color/colorSecondary"
        android:textColorHint="@color/colorSecondaryDark"
        android:textAlignment="center"
        android:inputType="textEmailAddress"
        android:layout_width="wrap_content"
        android:minWidth="@dimen/text_input_min_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="54dp"
        android:hint="@string/login_email_hint"
        android:paddingLeft="@dimen/text_entry_padding"
        android:paddingRight="@dimen/text_entry_padding"
        android:paddingTop="@dimen/text_input_top_bottom_padding"
        android:paddingBottom="@dimen/text_input_top_bottom_padding" />

    <EditText
        android:background="@drawable/edit_text_background"
        android:textColor="@color/colorSecondary"
        android:textColorHint="@color/colorSecondaryDark"
        android:id="@+id/user_password"
        android:inputType="textPassword"
        android:layout_width="wrap_content"
        android:minWidth="@dimen/text_input_min_width"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_alignParentTop="true"
        android:layout_marginTop="146dp"
        android:hint="@string/password_hint"
        android:paddingLeft="@dimen/text_entry_padding"
        android:paddingRight="@dimen/text_entry_padding"
        android:paddingTop="@dimen/text_input_top_bottom_padding"
        android:paddingBottom="@dimen/text_input_top_bottom_padding"/>

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/btn_signup"
        android:layout_marginEnd="70dp"
        android:padding="@dimen/btn_padding"
        android:text="@string/btn_signin" />

    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="201dp"
        android:layout_marginStart="62dp"
        android:layout_marginLeft="62dp"
        android:padding="@dimen/btn_padding"
        android:text="@string/btn_signup" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="109dp" />



</RelativeLayout>