<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackground"
    tools:context=".profile.ProfileActivity"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/profile_name_text"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="72dp"
        android:gravity="center"
        android:text="@string/profile_name_text"
        android:textAlignment="center"
        android:textColor="@color/colorSecondaryDark"
        android:textSize="@dimen/profile_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/profile_name"
        android:layout_width="@dimen/profile_name_width"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/edit_text_background"
        android:gravity="center"
        android:hint="@string/profile_name_hint"
        android:padding="@dimen/profile_name_padding"
        android:textAlignment="center"
        android:textColor="@color/colorSecondaryDark"
        android:textColorHint="@color/colorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name_text" />


    <Button
        android:id="@+id/save_profile_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="60dp"
        android:padding="@dimen/profile_save_button_padding"
        android:text="@string/profile_save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_name" />


</android.support.constraint.ConstraintLayout>