<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/activityBackground"
    tools:context=".CharacterSelectionActivity">

    <RelativeLayout
        android:id="@+id/character1"
        android:layout_width="@dimen/character_selection_frame_size"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_margin="@dimen/character_selection_margin"
        android:background="@drawable/character_selection_background_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/character1_image"
            android:layout_width="@dimen/character_selection_image_size"
            android:layout_height="@dimen/character_selection_image_size"
            android:layout_below="@+id/characeter1_name"
            android:layout_centerHorizontal="true"
            android:background="@drawable/character1"
            android:contentDescription="@string/character_image_placeholder" />

        <TextView
            android:id="@+id/characeter1_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/character_selection_text_margin"
            android:text="@string/character_name_placeholder"
            android:textColor="@color/colorSecondaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/characeter1_atk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/character1_image"
            android:layout_margin="@dimen/character_selection_text_margin"
            android:text="@string/character_stat_placeholder"
            android:textColor="@color/colorSecondary" />

        <TextView
            android:id="@+id/characeter1_dfs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/characeter1_atk"
            android:layout_margin="@dimen/character_selection_text_margin"
            android:text="@string/character_stat_placeholder"
            android:textColor="@color/colorSecondary" />

        <TextView
            android:id="@+id/characeter1_spd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/characeter1_dfs"
            android:layout_margin="@dimen/character_selection_text_margin"
            android:text="@string/character_stat_placeholder"
            android:textColor="@color/colorSecondary" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/character2"
        android:layout_width="@dimen/character_selection_frame_size"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_margin="@dimen/character_selection_margin"
        android:background="@drawable/character_selection_background_border"
        android:minHeight="@dimen/character_selection_frame_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character4">

        <ImageView
            android:id="@+id/character2_image"
            android:layout_width="@dimen/character_selection_image_size"
            android:layout_height="@dimen/character_selection_image_size"
            android:layout_below="@+id/characeter2_name"
            android:layout_centerHorizontal="true"
            android:background="@drawable/character2"
            android:contentDescription="@string/character_image_placeholder" />

        <TextView
            android:id="@+id/characeter2_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/character_selection_text_margin"
            android:text="@string/character_name_placeholder"
            android:textColor="@color/colorSecondaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/characeter2_atk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/character2_image"
            android:layout_margin="@dimen/character_selection_text_margin"
            android:text="@string/character_stat_placeholder"
            android:textColor="@color/colorSecondary" />

        <TextView
            android:id="@+id/characeter2_dfs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/characeter2_atk"
            android:layout_margin="@dimen/character_selection_text_margin"
            android:text="@string/character_stat_placeholder"
            android:textColor="@color/colorSecondary" />

        <TextView
            android:id="@+id/characeter2_spd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/characeter2_dfs"
            android:layout_margin="@dimen/character_selection_text_margin"
            android:text="@string/character_stat_placeholder"
            android:textColor="@color/colorSecondary" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/character3"
        android:layout_width="@dimen/character_selection_frame_size"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/character2"
        android:layout_margin="@dimen/character_selection_margin"
        android:background="@drawable/character_selection_background_border"
        android:minHeight="@dimen/character_selection_frame_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character1">

        <ImageView
            android:id="@+id/character3_image"
            android:layout_width="@dimen/character_selection_image_size"
            android:layout_height="@dimen/character_selection_image_size"
            android:layout_below="@+id/characeter3_name"
            android:layout_centerHorizontal="true"
            android:background="@drawable/character3"
            android:contentDescription="@string/character_image_placeholder" />

        <TextView
            android:id="@+id/characeter3_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/character_selection_text_margin"
            android:text="@string/character_name_placeholder"
            android:textColor="@color/colorSecondaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/characeter3_atk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/character3_image"
            android:layout_margin="@dimen/character_selection_text_margin"
            android:text="@string/character_stat_placeholder"
            android:textColor="@color/colorSecondary" />

        <TextView
            android:id="@+id/characeter3_dfs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/characeter3_atk"
            android:layout_margin="@dimen/character_selection_text_margin"
            android:text="@string/character_stat_placeholder"
            android:textColor="@color/colorSecondary" />

        <TextView
            android:id="@+id/characeter3_spd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/characeter3_dfs"
            android:layout_margin="@dimen/character_selection_text_margin"
            android:text="@string/character_stat_placeholder"
            android:textColor="@color/colorSecondary" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/character4"
        android:layout_width="@dimen/character_selection_frame_size"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/character1"
        android:layout_alignTop="@+id/character3"
        android:layout_margin="@dimen/character_selection_margin"
        android:background="@drawable/character_selection_background_border"
        android:minHeight="@dimen/character_selection_frame_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/character4_image"
            android:layout_width="@dimen/character_selection_image_size"
            android:layout_height="@dimen/character_selection_image_size"
            android:layout_below="@+id/characeter4_name"
            android:layout_centerHorizontal="true"
            android:background="@drawable/character4"
            android:contentDescription="@string/character_image_placeholder" />

        <TextView
            android:id="@+id/characeter4_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="@dimen/character_selection_text_margin"
            android:text="@string/character_name_placeholder"
            android:textColor="@color/colorSecondaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/characeter4_atk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/character4_image"
            android:layout_margin="@dimen/character_selection_text_margin"
            android:text="@string/character_stat_placeholder"
            android:textColor="@color/colorSecondary" />

        <TextView
            android:id="@+id/characeter4_dfs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/characeter4_atk"
            android:layout_margin="@dimen/character_selection_text_margin"
            android:text="@string/character_stat_placeholder"
            android:textColor="@color/colorSecondary" />

        <TextView
            android:id="@+id/characeter4_spd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/characeter4_dfs"
            android:layout_margin="@dimen/character_selection_text_margin"
            android:text="@string/character_stat_placeholder"
            android:textColor="@color/colorSecondary" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_confirm_character"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/btn_confirm_character"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>